...
                        .foregroundColor(.white)
                        .multilineTextAlignment(.center)
                        .padding()
                        .bold()
                    
                    Button(action: signInWithGoogle) {
                        Text("Inloggen met Google")
                            .padding(.vertical, 8)
                            .frame(maxWidth: .infinity)
                            .foregroundColor(.white)
                            .bold()
                            .background(alignment: .leading) {
                                Image("Google")
...
